# tagsystem

./: .gitignore  .gitmodules  .nvimrc.bak  CMakeLists.txt  Makefile  appveyor.yml  index  license.txt  readme.md  tagsystem.c  tagsystem.h  tagsystem.kdev4  todo.md  util.c  util.h
.kdev4/: tagsystem.kdev4
cli/: Makefile  main.c  main.h  tsys  utils.c  utils.h
datafortest/index/: lock.mdb
lmdb-notes/: Makefile  a.out  binding.gyp  main.cc  main.js  node_structure.txt  scratch.c
lmdb-notes/test/: Makefile  test.c
lmdbtest/: Makefile  lmdbtest  lmdbtest.c  temp.temp
lmdbtest/lmdbtestdir/: data.mdb  lock.mdb
notes/: cli-test.sh  compressed_binary_tree.md  env-var-workaround.md  interface.md  openssl-test.c  opensslnotes.txt  restoring-submodules.md  todo.md  tutorial.md  valgrind.sh
notes/src-bak/: ts.h  tsenv.h  tsiter.c  tsnode.c  tsnode.h  tstag.c  tstag.h  tswalk.h
notes/test-bak/: test.c
notes/test-bak/lmdbtest/: lmdbtest
src/: .kdev_include_paths  Makefile  iter.h  parsing.c  parsing.h  tagsystem.c  tagsystem.h  ts.c  ts.c~  ts.h  ts_dbpath.c  ts_dbpath.h  tsargs.c  tsargs.h  tscli.c  tscli.h  tsclihelp.c  tsclihelp.h  tscliutils.c  tscliutils.h  tsctx.c  tsdb.c  tsdb.h  tsdbpath.c  tsdoc.c  tsdoc.c~  tsdoc.h  tsenv.c  tsenv.h  tserror.h  tsid.c  tsid.h  tsiter.h.gch  tsnode.c  tsnode.h  tssearch.c  tssearch.h  tssearchset.c  tssearchset.h  tsstr.c  (+15 more)
src/bak/: ts.c  tsdoc.h  tsenv.c  tssearch.c  tssearch.h  tsutil.c
tagsystem/: tagsystem.workspace
test/: Makefile  addremove.c  clitest.sh  cmocka.unix.def.h  cmocka.win.def.h  redir.c  test  test-cli.sh  test.c  test.c~  test.h  test_cli.c  test_doc.c  test_id.c  test_parsing.c  test_search.c  test_tags.c  testshared
test/bak/: addremove.c
test/lmdbtest/: Makefile
test_db/index/: lock.mdb
utils/: iter.c
